add cmocka and one test

--- a/meson.build
+++ b/meson.build
@@ -7,10 +7,20 @@ project('Embedded Artistry libc',
 	meson_version: '>=0.63.0',
 	version: '1.0')
 
+###############
+# Subprojects #
+###############
+
 printf_subproject = subproject('printf')
 libprintf_dep = printf_subproject.get_variable('libprintf_dep')
+printf_includes = printf_subproject.get_variable('printf_includes')
 
 openlibm_subproject = subproject('openlibm')
 openlibm_dep = openlibm_subproject.get_variable('openlibm_dep')
+openlibm_includes = openlibm_subproject.get_variable('openlibm_includes')
+
+cmocka_subproject = subproject('cmocka')
+cmocka_dep = dependency('cmocka', required: false, fallback: ['cmocka', 'cmocka_dep'])
 
 subdir('src')
+subdir('test')
