--- a/src/meson.build
+++ b/src/meson.build
@@ -244,3 +244,13 @@ libc_native = static_library(
 	include_directories: [libc_includes, arch_specific_includes],
 	dependencies: [libprintf_dep, openlibm_dep],
 )
+
+libc_native_dep = declare_dependency(
+	include_directories: [
+		libc_includes,
+		arch_specific_includes,
+		openlibm_includes,
+		printf_includes
+	],
+	link_with: libc_native,
+)
