register printf tests

--- a/subprojects/packagefiles/printf/meson.build
+++ b/subprojects/packagefiles/printf/meson.build
@@ -1,6 +1,13 @@
-project('libprintf',
-	'c'
+project('printf-patch',
+	['c', 'cpp'],
+	default_options : [
+		'cpp_std=c++11',
+	],
 )
+
+#############################
+# Printf Dependency Targets #
+#############################
 
 printf_files = files('printf.c')
 printf_includes = include_directories('.', is_system: true)
@@ -15,3 +22,5 @@ libprintf_dep = declare_dependency(
 	include_directories: printf_includes,
 	link_with: libprintf,
 )
+
+subdir('test')
