--- a/subprojects/packagefiles/printf/test/meson.build
+++ b/subprojects/packagefiles/printf/test/meson.build
@@ -8,5 +8,14 @@ printf_tests = executable('printf_tests',
 
 test('printf_tests',
 	printf_tests,
-	args: ['-s', '-r', 'junit', '-o', meson.build_root() + '/test/printf_tests.xml']
+)
+
+# From the root directory: ninja -C buildresults printf@@printf-tests
+run_target('printf-tests',
+	command: printf_tests
+)
+
+# From the root directory: ninja -C buildresults printf@@printf-tests-xml
+run_target('printf-tests-xml',
+	command: [printf_tests, '-s', '-r', 'junit', '-o', meson.build_root() + '/test/printf_tests.xml']
 )
