--- a/src/meson.build
+++ b/src/meson.build
@@ -256,7 +256,8 @@ libc_native = static_library(
 	libc_common_files + libc_native_files,
 	c_args: libc_compile_flags,
 	include_directories: [libc_includes, arch_specific_includes],
-	dependencies: [libprintf_dep, openlibm_dep],
+	dependencies: [libprintf_native_dep, openlibm_dep],
+	native: true
 )
 
 libc_native_dep = declare_dependency(
