--- a/test/meson.build
+++ b/test/meson.build
@@ -77,8 +77,9 @@ libc_test_flags = c_compiler.get_supported_arguments(
 
 libc_tests = executable('libc_test',
 	libc_test_files,
-	dependencies: [cmocka_dep, libc_native_dep],
+	dependencies: [cmocka_native_dep, libc_native_dep],
 	c_args: libc_test_flags,
+	native: true, # limit libc_tests target to the build machine.
 )
 
 #############################
