--- a/src/meson.build
+++ b/src/meson.build
@@ -242,9 +242,15 @@ host_machine_arch_path = '../arch/' + host_machine.cpu_family() + '/include'
 build_machine_arch_include = include_directories(build_machine_arch_path)
 host_machine_arch_include = include_directories(host_machine_arch_path)
 
-libc_compile_flags = c_compiler.get_supported_arguments(
+libc_compile_flags = []
+
+libc_native_compile_flags = native_c_compiler.get_supported_arguments(
 	'-nostdinc', # Don't include standard include paths - we don't want system headers
 )
+libc_host_compile_flags = host_c_compiler.get_supported_arguments(
+	'-nostdinc', # Don't include standard include paths - we don't want system headers
+)
+
 if disable_unimplemented_apis
 	# Note: This needs to be set for both libc compilation + dependency compile_args
 	libc_compile_flags += '-DDISABLE_UNIMPLEMENTED_LIBC_APIS'
@@ -255,10 +261,28 @@ if enable_gnu_src
 	libc_compile_flags += '-D_GNU_SOURCE'
 endif
 
+libc = static_library(
+	'c',
+    c_args: libc_compile_flags + libc_host_compile_flags,
+    include_directories: [libc_includes, host_machine_arch_include],
+    dependencies: [libprintf_dep, openlibm_dep],
+)
+
+libc_dep = declare_dependency(
+	include_directories: [
+		libc_includes,
+		host_machine_arch_include,
+		openlibm_includes,
+		printf_includes
+	],
+	compile_args: libc_compile_flags + libc_host_compile_flags,
+	link_with: libc,
+)
+
 libc_native = static_library(
 	'c_native',
 	libc_common_files + libc_native_files,
-	c_args: libc_compile_flags,
+	c_args: libc_compile_flags + libc_native_compile_flags,
 	include_directories: [libc_includes, build_machine_arch_include],
 	dependencies: [libprintf_native_dep, openlibm_dep],
 	native: true
@@ -271,6 +295,6 @@ libc_native_dep = declare_dependency(
 		openlibm_includes,
 		printf_includes
 	],
-	compile_args: libc_compile_flags,
+	compile_args: libc_compile_flags + libc_native_compile_flags,
 	link_with: libc_native,
 )
